# Let-s-science

./: .dockerignore  Dockerfile  fly.toml  litefs.yml
backend/: Cargo.toml  db.sqlite3  refinery.toml  reset_db.sh
backend/migrations/: V1__create_user.sql  V2__create_group.sql  V3__create_permission.sql  V4__create_challenge.sql
backend/src/: auth.rs  main.rs  util.rs
backend/src/models/: mod.rs
backend/src/routes/: challenge.rs  group.rs  mod.rs  user.rs
frontend/: package-lock.json  package.json
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/client/: auth.ts  challenge.ts  fetchHelper.ts  group.ts  index.ts
frontend/components/AppShell/: Footer.tsx
frontend/components/AuthLayer/: AuthLayer.tsx
frontend/components/Avatar/: GroupAvatar.tsx  UserAvatar.tsx
frontend/components/ChallengeGrid/: ChallengeCard.tsx  ChallengeGrid.tsx  NewChallengeCard.tsx
frontend/components/DailyTasksCard/: DailyTasksCard.module.css  DailyTasksCard.tsx
frontend/components/Modals/: ChallengeListModal.tsx  CreateGroupModal.tsx  EditChallengeModal.tsx  GroupInviteModal.tsx  JoinGroupModal.tsx  ListGroupsModal.module.css  ListGroupsModal.tsx
frontend/components/PasswordStrength/: PasswordStrength.tsx
frontend/components/QR/: QRCodeScanner.tsx
frontend/components/SettingsCard/: SettingsCard.tsx
frontend/components/Tree/: Large.tsx  MediumLarge.tsx  MediumSmall.tsx  New.tsx  (+4 more)
frontend/helper/: challenges.ts
frontend/hooks/: common.ts  user.ts  userClient.ts
(+1 files in other folders)
